--- a/public/assets/css/canvas.css
+++ b/public/assets/css/canvas.css
@@ -1,15 +1,91 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 20px;
-    padding: 20px;
+    margin: 0px;
+    padding-top: 50px;
+    padding: 0px;
     background-color: #f8f9fa;
+    box-sizing: border-box;
+    transition: filter 0.3s ease;
 }
 
-h1 {
+/*navbar*/
+.navbar{
+    top: 0px;
+    width: 20%;
+    height: 100%;
+    background-color: rgb(66, 66, 218);
+    position: fixed;
+    z-index: 0;
+    display: none;
+    justify-content: space-between;
+    align-items: center;
+    transition: background-color 0.3s;
+   
+}
+.button_container{
+    position: fixed;
+    background-color: rgb(66, 66, 218);
+    width: 100%;
+  
+}
+.menu_button{
+    
+    font-size: 30px;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    display: block;
+    z-index: 101;
+}
+
+.ul_style{
+    margin: 0;
+    display: flex;
+    list-style-type: none;
+    flex-direction: column;
+    align-items: flex-start;
+}
+.ul_style li{
+    padding-top: 10px;
+    display: inline-block;
+    margin-left: 50px;
+}
+.ul_style a{
+    color: white;
+    text-decoration: none;
+    font-size: 18px;
+}
+.ul_style ul li a{
+    display: block;
+}
+
+
+.navbar.expanded {
+    background-color: rgba(0, 0, 0, 0.8);
+    display: block;
+    z-index: 200;
+}
+/*section*/
+.sect_graficos{
+    padding: 40px;
     text-align: center;
+    transition: filter 0.3s ease;
+    
+}
+.sect_graficos.blurred{
+    filter: blur(5px);
+    z-index: 1;
+}
+.sect_graficos h1{
+    font-size: 50px;
 }
 
-canvas {
-    max-width: 800px;
-    margin: auto;
+.container_grafico{
+    width: 80%;
+    display: flex;
+    gap: 50%;
+    position: relative;
+    left: 10%;
 }
+
