--- a/public/assets/css/canvas.css
+++ b/public/assets/css/canvas.css
@@ -45,11 +45,21 @@ body {
     list-style-type: none;
     flex-direction: column;
     align-items: flex-start;
+    padding-left: 0;
+    text-align: center;
+    margin-top: 50px;
+    
+}
+.li_hover{
+    width: 100%;
+    height: 100%;
 }
 .ul_style li{
-    padding-top: 10px;
+    padding: 20px;
+    padding-left: 0;
+    padding-right: 0;
     display: inline-block;
-    margin-left: 50px;
+    
 }
 .ul_style a{
     color: white;
@@ -66,6 +76,40 @@ body {
     display: block;
     z-index: 200;
 }
+
+/*area perfil*/
+.perfil_container{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    margin-top: 40px;
+    flex-direction: column;
+    gap: 10px;
+}
+.user_icon{
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border: 2px solid white;
+}
+
+.profile_button,
+.logout_button {
+    background-color: white;
+    border: none;
+    border-radius: 5px;
+    color: rgb(66, 66, 218);
+    cursor: pointer;
+    padding: 10px 15px;
+    font: 14px;
+    transition: background-color 0.3s;
+}
+.profile_button:hover,
+.logout_button:hover,
+.li_hover:hover{
+    background-color: rgba(66, 66, 218, 0.8);
+    color: white;
+}
 /*section*/
 .sect_graficos{
     padding: 40px;
@@ -80,12 +124,23 @@ body {
 .sect_graficos h1{
     font-size: 50px;
 }
+.sect_graficos h2{
+    font-size: 25px;
+}
 
 .container_grafico{
     width: 80%;
     display: flex;
-    gap: 50%;
+    flex-wrap: wrap;
+    gap: 5%;
+    justify-content: center;
     position: relative;
-    left: 10%;
+    left: 20%;
+    padding-top: 50px;
+}
+
+.grafico{
+    flex: 1 1 calc(45% - 2%);
+    box-sizing: border-box;
 }
 
